--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "source": "https://github.com/MolajoPlugins/Spamprotection"
     },
     "require": {
-        "molajo/plugins": "dev-master"
+      "php": ">=5.4",
+      "composer/installers": "dev"
     },
     "autoload": {
         "psr-4": {
